--- a/FE630 - Homework/FE630 - Homework #1/Sid Bhatia - FE630 ~ Homework #1.html
+++ b/FE630 - Homework/FE630 - Homework #1/Sid Bhatia - FE630 ~ Homework #1.html
@@ -8492,6 +8492,41 @@ META    0.000357  0.000548  0.000489  0.001151
 </div>
 </div>
 </div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span><span class="c1"># Create the sequence Lambda from 0.01 to 100 in steps of 0.1, excluding the last step if it goes over 100.</span>
+<span class="n">Lambda</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">arange</span><span class="p">(</span><span class="mf">0.01</span><span class="p">,</span> <span class="mf">100.01</span><span class="p">,</span> <span class="mf">0.1</span><span class="p">)</span>
+
+<span class="c1"># Display the first few elements to verify.</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">Lambda</span><span class="p">[:</span><span class="mi">10</span><span class="p">])</span>
+
+<span class="c1"># Display the last few elements to verify.</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">Lambda</span><span class="p">[</span><span class="o">-</span><span class="mi">10</span><span class="p">:])</span>
+</pre></div>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell-outputWrapper">
+<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
+</div>
+<div class="jp-OutputArea jp-Cell-outputArea">
+<div class="jp-OutputArea-child">
+<div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
+<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
+<pre>[0.01 0.11 0.21 0.31 0.41 0.51 0.61 0.71 0.81 0.91]
+[99.01 99.11 99.21 99.31 99.41 99.51 99.61 99.71 99.81 99.91]
+</pre>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper" tabindex="0">
