--- a/FE630 - Homework/FE630 - Homework #1/Sid Bhatia - FE630 ~ Homework #1.html
+++ b/FE630 - Homework/FE630 - Homework #1/Sid Bhatia - FE630 ~ Homework #1.html
@@ -7532,9 +7532,9 @@ a.anchor-link {
 <p>a. <strong>Certainty Equivalent and Risk Premium</strong> (5 pts)</p>
 <p>An investor whose initial wealth is $\$1000$ is offered an opportunity to play a fair game with 2 possible outcomes: winning $\$350$ with a probability of $1/3$ or losing $\$150$ with a probability of $2/3$. The investor utility function is the natural logarithm of his wealth, $u(W) = \ln(W)$.</p>
 <ul>
-<li>What is the Certainty Equivalent of this risky game?</li>
-<li>What is the exact Risk Premium of this risky game?</li>
-<li>How good is the approximation obtained by using a Taylor series expansion?</li>
+<li><em>What is the Certainty Equivalent of this risky game?</em></li>
+<li><em>What is the exact Risk Premium of this risky game?</em></li>
+<li><em>How good is the approximation obtained by using a Taylor series expansion?</em></li>
 </ul>
 </div>
 </div>
@@ -7733,7 +7733,7 @@ Taylor Series Expected Utility Approximation: 6.9243
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>b. <strong>Sensitivity to Initial Wealth</strong> (5 pts)</p>
-<p>Assume that the initial wealth is $\$2000$. What is the risk premium now?</p>
+<p>Assume that the initial wealth is $\$2000$. <em>What is the risk premium now?</em></p>
 </div>
 </div>
 </div>
@@ -7798,7 +7798,7 @@ Taylor Series Expected Utility Approximation: 6.9243
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>c. <strong>Sensitivity to Volatility</strong> (5 pts)</p>
-<p>Assume that the initial wealth is $\$1000$ and the outcomes are winning $\$300$ with a probability of $1/2$ or losing $\$300$ with a probability of $1/2$. What is the risk premium now?</p>
+<p>Assume that the initial wealth is $\$1000$ and the outcomes are winning $\$300$ with a probability of $1/2$ or losing $\$300$ with a probability of $1/2$. <em>What is the risk premium now?</em></p>
 </div>
 </div>
 </div>
@@ -7892,7 +7892,7 @@ Taylor Series Expected Utility Approximation: 6.9243
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>a. <strong>Absolute Risk Aversion &amp; Risk Attitude</strong> (10 pts)</p>
-<p>Compute the absolute risk aversion coefficient and describe the risk attitude of the investor (Risk-averse or Risk-taker) as a function of $k$. Justify your answer.</p>
+<p><em>Compute the absolute risk aversion coefficient and describe the risk attitude of the investor (Risk-averse or Risk-taker) as a function of $k$. Justify your answer.</em></p>
 </div>
 </div>
 </div>
@@ -8011,7 +8011,7 @@ For k = 1.5, the Absolute Risk Aversion (ARA) coefficient is -0.0005, indicating
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>b. $\boldsymbol{k = 1/2}$ (10 pts)</p>
-<p>Assume that $k = 1/2$. What is the Certainty equivalent of this risky game? What is the exact risk premium of this risky game? How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?</p>
+<p><em>Assume that $k = 1/2$. What is the Certainty equivalent of this risky game? What is the exact risk premium of this risky game? How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?</em></p>
 </div>
 </div>
 </div>
@@ -8139,7 +8139,7 @@ Taylor Series Expected Utility Approximation: 32.1454
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>c. $\boldsymbol{k = 2}$ (10 pts)</p>
-<p>Assume that $k = 2$. What is the Certainty equivalent of this risky game? What is the exact risk premium of this risky game? How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?</p>
+<p><em>Assume that $k = 2$. What is the Certainty equivalent of this risky game? What is the exact risk premium of this risky game? How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?</em></p>
 </div>
 </div>
 </div>
@@ -8239,7 +8239,7 @@ Taylor Series Expected Utility Approximation for k = 2: 1067777.78
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>a. <strong>Risk Aversion</strong> (10 pts)</p>
-<p>Prove that an investor with utility function $U(r_p) = -e^{-\lambda r_p}$ for $\lambda &gt; 0$ is risk-averse.</p>
+<p><em>Prove that an investor with utility function $U(r_p) = -e^{-\lambda r_p}$ for $\lambda &gt; 0$ is risk-averse.</em></p>
 </div>
 </div>
 </div>
@@ -8278,8 +8278,8 @@ $$U''(r_p) = \frac{d^2}{d(r_p)^2}(-e^{-\lambda r_p}) = -\lambda^2 e^{-\lambda r_
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>b. <strong>Equivalent Quadratic Problem</strong> (10 pts)</p>
 <ul>
-<li>Provide the expressions of $\mu_p(\omega)$, the Expected return of the portfolio as a function of $\mu$. Provide the expression of $\sigma_p(\omega)^2$, the variance of the portfolio as a function of $\Sigma$. (5 pts)</li>
-<li>Now we assume that the distribution of $r$, random return of the securities, is Gaussian. Prove that maximizing the expected utility $E[U(r_P(\omega))]$ is equivalent to a linear quadratic minimization of an objective function depending solely on $\mu, \Sigma$, and $\omega$. (5 pts)</li>
+<li><em>Provide the expressions of $\mu_p(\omega)$, the Expected return of the portfolio as a function of $\mu$. Provide the expression of $\sigma_p(\omega)^2$, the variance of the portfolio as a function of $\Sigma$.</em> (5 pts)</li>
+<li>Now we assume that the distribution of $r$, random return of the securities, is Gaussian. <em>Prove that maximizing the expected utility $E[U(r_P(\omega))]$ is equivalent to a linear quadratic minimization of an objective function depending solely on $\mu, \Sigma$, and $\omega$.</em> (5 pts)</li>
 </ul>
 </div>
 </div>
@@ -8351,7 +8351,7 @@ $$U''(r_p) = \frac{d^2}{d(r_p)^2}(-e^{-\lambda r_p}) = -\lambda^2 e^{-\lambda r_
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>a. <strong>Stock Closing Prices</strong></p>
-<p>Download daily closing prices for the common stocks of Apple, Google, Facebook and Amazon from January 1st, 2022 to December 30th, 2023.</p>
+<p><em>Download daily closing prices for the common stocks of Apple, Google, Facebook and Amazon from January 1st, 2022 to December 30th, 2023.</em></p>
 </div>
 </div>
 </div>
@@ -8423,7 +8423,7 @@ Date
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>b. <strong>Expected Returns Vector &amp; Covariance Matrix</strong></p>
-<p>Use the entire data to compute the Expected Returns Vector and Covariance matrix.</p>
+<p><em>Use the entire data to compute the Expected Returns Vector and Covariance matrix.</em></p>
 </div>
 </div>
 </div>
@@ -8488,7 +8488,7 @@ META    0.090059  0.138189  0.123173  0.290097
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>c. <strong>Sequence Creation</strong></p>
-<p>Create a sequence $\Lambda = \{\lambda_0, \lambda_1, \dots, \lambda_n\}$ containing numbers from 0.01 to 100 in steps of 0.1.</p>
+<p><em>Create a sequence $\Lambda = \{\lambda_0, \lambda_1, \dots, \lambda_n\}$ containing numbers from 0.01 to 100 in steps of 0.1.</em></p>
 </div>
 </div>
 </div>
@@ -8535,7 +8535,7 @@ META    0.090059  0.138189  0.123173  0.290097
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>d. <strong>Optimal Portfolio</strong></p>
-<p>Run through a loop for each value in $\lambda_{i} \in \Lambda$ to:</p>
+<p><em>Run through a loop for each value in $\lambda_{i} \in \Lambda$ to:</em></p>
 <ul>
 <li>Using a numerical solver in R, Matlab or Python, find the optimal portfolio corresponding to Item 3-(c) with the computed $\rho, \Sigma$ and $\lambda_i$ selected from $\Lambda$.</li>
 <li>Compute the optimal portfolio’s expected return and standard deviation of return.</li>
@@ -8708,7 +8708,7 @@ META    0.090059  0.138189  0.123173  0.290097
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>a. <strong>Portfolio Variance</strong></p>
-<p>Give the expression of the Portfolio’s variance $\sigma^2_P(n)$ as a function of $\Sigma$ and $n$.</p>
+<p><em>Give the expression of the Portfolio’s variance $\sigma^2_P(n)$ as a function of $\Sigma$ and $n$.</em></p>
 </div>
 </div>
 </div>
@@ -8738,7 +8738,7 @@ META    0.090059  0.138189  0.123173  0.290097
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>b. <strong>Variance Convergence</strong></p>
-<p>Prove that when goes to infinity, the variance of the Equally Weighted Portfolio’s variance $\sigma^2_P(n)$ converges to the average covariance between all securities’ returns.</p>
+<p><em>Prove that when goes to infinity, the variance of the Equally Weighted Portfolio’s variance $\sigma^2_P(n)$ converges to the average covariance between all securities’ returns.</em></p>
 </div>
 </div>
 </div>
@@ -8784,7 +8784,7 @@ META    0.090059  0.138189  0.123173  0.290097
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>We assume that $n = 2$ and denote by and denote by $\rho$ the <strong>covariance</strong> between $r_1$ and $r_2$. Analyze the Portfolio’s Risk $\sigma_P$ and Expected Return $\mu_p = E(r_p)$, and provide their analytical expressions as a function of $\rho$. Write a computer program in Python or R to plot the efficient frontier (graph of $\mu_p$ [y-axis] as a function $\sigma_P$ [x-axis]) in three following scenarios:</p>
+<p>We assume that $n = 2$ and denote by and denote by $\rho$ the <strong>covariance</strong> between $r_1$ and $r_2$. <em>Analyze the Portfolio’s Risk $\sigma_P$ and Expected Return $\mu_p = E(r_p)$, and provide their analytical expressions as a function of $\rho$.</em> <em>Write a computer program in Python or R to plot the efficient frontier (graph of $\mu_p$ [y-axis] as a function $\sigma_P$ [x-axis]) in three following scenarios:</em></p>
 </div>
 </div>
 </div>
@@ -8819,7 +8819,7 @@ META    0.090059  0.138189  0.123173  0.290097
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>a. <strong>Perfect Correlation</strong></p>
-<p>Perfect correlation: $\rho = 1$</p>
+<p><em>Perfect correlation: $\rho = 1$</em></p>
 </div>
 </div>
 </div>
@@ -8831,7 +8831,7 @@ META    0.090059  0.138189  0.123173  0.290097
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>b. <strong>Perfect Anti-Correlation</strong></p>
-<p>Perfect anti-correlation: $\rho = -1$.</p>
+<p><em>Perfect anti-correlation: $\rho = -1$.</em></p>
 </div>
 </div>
 </div>
@@ -8843,7 +8843,7 @@ META    0.090059  0.138189  0.123173  0.290097
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>c. <strong>No Correlation</strong></p>
-<p>No correlation: $\rho = 0$.</p>
+<p><em>No correlation: $\rho = 0$.</em></p>
 </div>
 </div>
 </div>
